--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
     </div>
     <!--/row-->
     <%= render 'shared/footer' %>
-
+    <%= render 'shared/sign_up_modal' unless current_user %>
+    <%= render 'shared/sign_in_modal' unless current_user %>
   </body>
 </html>
