allow user to login from fb from modals

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
         <div class="card-body">
           <div align="center">
             <span class="social-btn"></span>
-            <a href="#" class="btn btn-facebook">
+            <a href="<%= user_facebook_omniauth_authorize_path %>" class="btn btn-facebook">
               Sign up with Facebook
             </a>
           </div>
