--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
   <body>
     <%= render 'shared/top_bar' %>
     <%= render 'shared/navbar' %>
-
+    <%= render 'shared/alerts' %>
     <div class="row">
       <div class="col-md-12">
         <%= yield %>
