--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,7 +42,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <%= link_to 'My Profile', edit_user_registration_path, class: 'dropdown-item' %>
-                <% if current_user.role_id == 2 %>
+                <% if current_user.role == 'admin' %>
                   <%= link_to 'Feedbacks', feedbacks_path, class: 'dropdown-item' %>
                   <%= link_to 'Team generator', new_team_path, class: 'dropdown-item' %>
                   <%= link_to 'Teams', teams_path, class: 'dropdown-item' %>
