update routes to more 'ror' way

--- a/app/views/nlbc/boxing.html.erb
+++ b/app/views/nlbc/boxing.html.erb
@@ -27,7 +27,7 @@
           <h4 class="card-title">Challenge 1</h4>
           <h6 class="card-subtitle">Jab + Cross</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
           <h4 class="card-title">Challenge 2</h4>
           <h6 class="card-subtitle">Hook</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
           <h4 class="card-title">Challenge 3</h4>
           <h6 class="card-subtitle">Uppercut</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@
           <h4 class="card-title">Challenge 4</h4>
           <h6 class="card-subtitle">2 punch combis</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
           <h4 class="card-title">Challenge 5</h4>
           <h6 class="card-subtitle">Block</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           <h4 class="card-title">Challenge 6</h4>
           <h6 class="card-subtitle">Slip a jab</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
           <h4 class="card-title">Challenge 7</h4>
           <h6 class="card-subtitle">Shoulder roll</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
           <h4 class="card-title">Challenge 8</h4>
           <h6 class="card-subtitle">Defensive combis</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
           <h4 class="card-title">Challenge 9</h4>
           <h6 class="card-subtitle">3 punch combo</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
           <h4 class="card-title">Challenge 10</h4>
           <h6 class="card-subtitle">4 punch combo</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
           <h4 class="card-title">Challenge 11</h4>
           <h6 class="card-subtitle">5 punch combo</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
           <h4 class="card-title">Challenge 12</h4>
           <h6 class="card-subtitle">Defence offence combi</h6>
           <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
