--- a/app/views/nlbc/dancing.html.erb
+++ b/app/views/nlbc/dancing.html.erb
@@ -27,7 +27,7 @@
           <h4 class="card-title">Challenge 1</h4>
           <h6 class="card-subtitle">Basic Step</h6>
           <p class="card-text">The most important step to learn. It takes a bit of practise to do it without thinking but salsa starts here.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
           <h4 class="card-title">Challenge 2</h4>
           <h6 class="card-subtitle">Cross Body Lead(cbl)</h6>
           <p class="card-text">If you want to switch sides in salsa, this is how to do it and it gives a lot of nice possible combinations and flair.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
           <h4 class="card-title">Challenge 3</h4>
           <h6 class="card-subtitle">Right turn</h6>
           <p class="card-text">This is the most common turn in salsa and you'll be doing a lot of those so its important to do it smoothly.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@
           <h4 class="card-title">Challenge 4</h4>
           <h6 class="card-subtitle">Basic Combination</h6>
           <p class="card-text">From our first 3 challenges we can already do a very cool combination. So we practise to automate it here.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
           <h4 class="card-title">Challenge 5</h4>
           <h6 class="card-subtitle">guys turn, ladies turn</h6>
           <p class="card-text">Also called the double spot turn, its easy to learn, looks cool and a smooth way to change hands also.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           <h4 class="card-title">Challenge 6</h4>
           <h6 class="card-subtitle">step back, check + turn</h6>
           <p class="card-text">This is a nice change from the other steps. Once you are used to the step back, this is a very relaxed move.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
           <h4 class="card-title">Challenge 7</h4>
           <h6 class="card-subtitle">cbl inside turn</h6>
           <p class="card-text">Maybe one of the most challenging moves in the beginning, its not easy to lead and it takes practise.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
           <h4 class="card-title">Challenge 8</h4>
           <h6 class="card-subtitle">Improvers combination</h6>
           <p class="card-text">Dancing salsa on a public dancefloor starts here, after this combination you'll look smooth.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
           <h4 class="card-title">Challenge 9</h4>
           <h6 class="card-subtitle">left turn, 2 hand turns</h6>
           <p class="card-text">The left turn is not much used on its own, but understanding it makes the complicated combinations much easier.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
           <h4 class="card-title">Challenge 10</h4>
           <h6 class="card-subtitle">2 hand turn, 2 hand cbl inside turn</h6>
           <p class="card-text">Using 2 hands gives you more control and also makes it feel more intimate.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
           <h4 class="card-title">Challenge 11</h4>
           <h6 class="card-subtitle">2 hand cbl, comb over</h6>
           <p class="card-text">Its important to know how to switch from 2 hands to other hand holds. you'll get an understanding of all 6 hand holds.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
           <h4 class="card-title">Challenge 12</h4>
           <h6 class="card-subtitle">Intermediate combi</h6>
           <p class="card-text">Its time to show off. With the stuff you know now there are endless combinations. And it will be easy to add new moves.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
