--- a/app/views/nlbc/programming.html.erb
+++ b/app/views/nlbc/programming.html.erb
@@ -27,7 +27,7 @@
           <h4 class="card-title">Challenge 1</h4>
           <h6 class="card-subtitle">html/css/js</h6>
           <p class="card-text">A first look to see the basics of the languages of the web and starting to write code.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
           <h4 class="card-title">Challenge 2</h4>
           <h6 class="card-subtitle">Formatting page content</h6>
           <p class="card-text">Using html and different tags to format pages in different ways.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
           <h4 class="card-title">Challenge 3</h4>
           <h6 class="card-subtitle">Structure content</h6>
           <p class="card-text">Structure content in html and use the right tags while structuring them.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@
           <h4 class="card-title">Challenge 4</h4>
           <h6 class="card-subtitle">Creating links</h6>
           <p class="card-text">How to use links to connect within the page or external websites.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
           <h4 class="card-title">Challenge 5</h4>
           <h6 class="card-subtitle">Creating lists</h6>
           <p class="card-text">Use different types of lists to order your content and learn and see when to use which list.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           <h4 class="card-title">Challenge 6</h4>
           <h6 class="card-subtitle">Controlling Styling</h6>
           <p class="card-text">Seeing the 3 different ways to add css to your webpage and finding out most common way.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
           <h4 class="card-title">Challenge 7</h4>
           <h6 class="card-subtitle">Controlling styling part 2</h6>
           <p class="card-text">Learn how to give colors, fonts and other attributes and properties to different elements on your webpages.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
           <h4 class="card-title">Challenge 8</h4>
           <h6 class="card-subtitle">CSS basics</h6>
           <p class="card-text">Understanding all the basic elements of css to create layouts and see how they work together.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
           <h4 class="card-title">Challenge 9</h4>
           <h6 class="card-subtitle">CSS common concepts</h6>
           <p class="card-text">Understanding all the basic elements of css and how they work together.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
           <h4 class="card-title">Challenge 10</h4>
           <h6 class="card-subtitle">CSS frameworks</h6>
           <p class="card-text">Seeing a faster and structured way using a library with pre-defined css(bootstrap).</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
           <h4 class="card-title">Challenge 11</h4>
           <h6 class="card-subtitle">Adding Javascript</h6>
           <p class="card-text">See how we add javascript to our html code and how we add interaction to our webpage using Javascript.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
           <h4 class="card-title">Challenge 12</h4>
           <h6 class="card-subtitle">Conditional Javascript</h6>
           <p class="card-text">Getting a first look on the power of conditional code on a webpage.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
