--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,25 +19,25 @@
 
     <div class="pull-right">
       <span>
-        <a href="<%= privacy_policy_path %>">Privacy Policy</a>
+        <a href="<%= nlbc_privacy_path %>">Privacy Policy</a>
       </span>
       <span>
-        <a href="<%= programming_path %>#passion-cover">Programming</a>
+        <a href="<%= nlbc_programming_path %>#passion-cover">Programming</a>
       </span>
       <span>
-        <a href="<%= dancing_path %>#passion-cover">Dancing</a>
+        <a href="<%= nlbc_dancing_path %>#passion-cover">Dancing</a>
       </span>
       <span>
-        <a href="<%= photography_path %>#passion-cover">Photography</a>
+        <a href="<%= nlbc_photography_path %>#passion-cover">Photography</a>
       </span>
       <span>
-        <a href="<%= boxing_path %>#passion-cover">Boxing</a>
+        <a href="<%= nlbc_boxing_path %>#passion-cover">Boxing</a>
       </span>
       <span>
-        <a href="<%= qajava_path %>#passion-cover">QAJava</a>
+        <a href="<%= nlbc_qajava_path %>#passion-cover">QAJava</a>
       </span>
       <span>
-        <a href="<%= trainers_path %>">Trainers</a>
+        <a href="<%= nlbc_trainers_path %>">Trainers</a>
       </span>
       <% unless current_user %>
         <span>
