--- a/app/views/nlbc/all_users.html.erb
+++ b/app/views/nlbc/all_users.html.erb
@@ -18,7 +18,7 @@
               <td><%= user.email %></td>
               <td><%= "#{user.first_name} #{user.last_name}" %></td>
               <td><%= user.male.nil? ? '-' : (user.male ? 'Male' : 'Female') %></td>
-              <td><%= link_to "Delete user", {controller:"welcome", action:"delete_user", :id => user.id},
+              <td><%= link_to "Delete user", {controller:"nlbc", action:"delete_user", :id => user.id},
                               method: :delete, data:{confirm:"Are you sure?"}, class:"btn btn btn-outline-danger btn-sm" %></td>
             </tr>
           <% end %>
