--- a/app/views/nlbc/qajava.html.erb
+++ b/app/views/nlbc/qajava.html.erb
@@ -27,7 +27,7 @@
           <h4 class="card-title">Challenge 1</h4>
           <h6 class="card-subtitle">html/css/js/selectors</h6>
           <p class="card-text">First look at selectors and how to find and test them in your browser.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
           <h4 class="card-title">Challenge 2</h4>
           <h6 class="card-subtitle">Data structure and logic</h6>
           <p class="card-text">Its about know how to store data in memory and how to manipulate that data with programmed decision making.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
           <h4 class="card-title">Challenge 3</h4>
           <h6 class="card-subtitle">classes/methods/objects</h6>
           <p class="card-text">This is all about understanding how to structure the code in object oriented languages.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@
           <h4 class="card-title">Challenge 4</h4>
           <h6 class="card-subtitle">Libraries</h6>
           <p class="card-text">How to use code that is written by someone else or how to make it available for someone else.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
           <h4 class="card-title">Challenge 5</h4>
           <h6 class="card-subtitle">Webdriver methods</h6>
           <p class="card-text">How to use the webdriver library and understand some of its basic methods and how to use them.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           <h4 class="card-title">Challenge 6</h4>
           <h6 class="card-subtitle">Automating with Junit</h6>
           <p class="card-text">Using the Junit library and its buildin classes to easily structure your automation process.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
           <h4 class="card-title">Challenge 7</h4>
           <h6 class="card-subtitle">Multibrowser with saucelabs</h6>
           <p class="card-text">How to use a cloud service to make your test work on multiple browsers/versions and platforms.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
           <h4 class="card-title">Challenge 8</h4>
           <h6 class="card-subtitle">BDD user story</h6>
           <p class="card-text">Understanding what BDD means, how to write an specification by example user story in BDD style.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
           <h4 class="card-title">Challenge 9</h4>
           <h6 class="card-subtitle">Connecting cucumber</h6>
           <p class="card-text">Connecting and understanding the cucumber library to use the BDD approach for automation.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
           <h4 class="card-title">Challenge 10</h4>
           <h6 class="card-subtitle">Maven dependecy management</h6>
           <p class="card-text">A better way for project and dependency management instead of downloading/updating the libraries manually for every new project.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
           <h4 class="card-title">Challenge 11</h4>
           <h6 class="card-subtitle">Automate BDD with Junit</h6>
           <p class="card-text">Comfortably start writing Junit tests from User stories from scratch.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
           <h4 class="card-title">Challenge 12</h4>
           <h6 class="card-subtitle">Automate BDD with cucumber</h6>
           <p class="card-text">Comfortably start writing BDD driven user stories into cucumber tests from scratch.</p>
-          <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
+          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
     </div>
