--- a/app/views/passions/show.html.erb
+++ b/app/views/passions/show.html.erb
@@ -4,7 +4,7 @@
       <h4>Subscribe to "<%= @passion.title.upcase %>"</h4>
     </div>
     <div class="panel-body">
-      <%= button_to "Subscribe", {:controller => "welcome", :action => "subscribe_to_passion", :user_id => current_user.id, :passion_id => @passion.id},
+      <%= button_to "Subscribe", {:controller => "nlbc", :action => "subscribe_to_passion", :user_id => current_user.id, :passion_id => @passion.id},
                                   data:{:confirm => "Do you want to subscribe to this passion?"}, :method => :post, class:"btn btn-primary"%>
     </div>
   </div>
