--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -7,6 +7,64 @@
   <p align="center" class="paragraph">Meet the people who make learning fun!</p>
 </div>
 
+<div id="trainer-filters" class="container col-md-6">
+  <%= form_for nlbc_trainers_path, method: :get do %>
+    <div class="row justify-content-md-center">
+      <div class="col-md-3">
+        <div class="dropdown">
+          <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Passion
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <% @passions.each do |passion| %>
+              <div class="dropdown-item">
+                <label>
+                  <%= check_box_tag 'passions[]', passion.id %> <%= passion.title.capitalize %>
+                </label>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="dropdown">
+          <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Challenge
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <% @challenges.each do |challenge| %>
+              <div class="dropdown-item">
+                <label>
+                  <%= check_box_tag 'challenges[]', challenge.id %> <%= challenge.title.capitalize %>
+                </label>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="dropdown">
+          <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Location
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <% @locations.each do |location| %>
+              <div class="dropdown-item">
+                <label>
+                  <%= check_box_tag 'locations[]', location %> <%= location.capitalize %>
+                </label>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <%= submit_tag 'Look up for trainers', class: 'btn btn-sm' %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
 <div id="trainers">
   <div class="container">
     <div class="row justify-content-md-left">
