--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,6 +6,9 @@
         <div class="card-body">
           <div class="card-title">My Profile</div>
           <div class="form-group">
+            <p align="center"><%= image_tag (@user.avatar.present? ? @user.avatar.url(:thumb) : 'missing.png'), height: 120, class: 'rounded-circle' %></p>
+          </div>
+          <div class="form-group">
             <label>Email:</label>
             <p><%= @user.email %></p>
           </div>
@@ -30,10 +33,14 @@
         <div class="card-body">
           <div class="card-title">Edit account information</div>
           <hr>
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true, method: :put }) do |f| %>
+            <div class="form-group">
+              <%= f.label :avatar, "PROFILE PICTURE" %>
+              <%= f.file_field :avatar, class: 'form-control' %>
+            </div>
             <div class="form-group">
               <%= f.label :email, "EMAIL" %>
-              <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+              <%= f.email_field :email, class: 'form-control' %>
             </div>
             <div class="form-group">
               <%= f.label :first_name, "FIRST NAME" %>
