--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -71,5 +71,5 @@
     </div>
   </div>
   <% end %>
-  <%= will_paginate @feedbacks, renderer: BootstrapPagination::Rails %>
+  <%= paginate @feedbacks, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm" %>
 </div>
