--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -158,3 +158,8 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+$(document).on('click', 'div .dropdown-menu', function (e) {
+  e.stopPropagation();
+});
+</script>
