bugfix: actions index page - admin

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -14,7 +14,7 @@
   #sidebar{
     transform: translateX(260px);
   }
-  .index_content{
+  .batch_actions_selector, .index_content{
     transform: translateX(270px);
   }
 }
