bugfix: index actions dropdown menu

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -17,6 +17,10 @@
   .batch_actions_selector, .index_content{
     transform: translateX(270px);
   }
+  .dropdown_menu_list_wrapper{
+    top: 0px !important;
+    left: 150px !important;
+  }
 }
 
 
