--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,18 @@
       </ul>
       <div class="my-2 my-lg-0">
         <ul class="navbar-nav mr-auto">
+          <% all_categories.each do |category| %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="Javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <%= category.name.titleize %>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <% category.passions.each do |passion| %>
+                  <%= link_to passion.title.titleize, passion_path(passion), class: 'dropdown-item' %>
+                <% end %>
+              </div>
+            </li>
+          <% end %>
           <li class="nav-item">
             <a class="nav-link" href="<%= nlbc_programming_path %>#passion-cover">Programming</a>
           </li>
