--- a/app/views/passions/show.html.erb
+++ b/app/views/passions/show.html.erb
@@ -23,7 +23,7 @@
     <% @passion.challenges.order(:number).each do |challenge| %>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="card text-center" style="margin-bottom: 20px;">
-          <%= image_tag 'programming/htmlCssJs.png', class: 'card-img-top card-img-top-programming' %>
+          <%= image_tag (challenge.image.present? ? challenge.image.url : 'logo.png'), class: 'card-img-top card-img-top-programming' %>
           <div class="card-body">
             <h4 class="card-title">Challenge <%= challenge.number %></h4>
             <h6 class="card-subtitle"><%= challenge.title %></h6>
@@ -33,154 +33,6 @@
         </div>
       </div>
     <% end %>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/htmlCssJs.png', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 1</h4>
-          <h6 class="card-subtitle">html/css/js</h6>
-          <p class="card-text">A first look to see the basics of the languages of the web and starting to write code.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/formatingPageContent.png', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 2</h4>
-          <h6 class="card-subtitle">Formatting page content</h6>
-          <p class="card-text">Using html and different tags to format pages in different ways.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/structureContent.png', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 3</h4>
-          <h6 class="card-subtitle">Structure content</h6>
-          <p class="card-text">Structure content in html and use the right tags while structuring them.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/creatingLinks.jpg', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 4</h4>
-          <h6 class="card-subtitle">Creating links</h6>
-          <p class="card-text">How to use links to connect within the page or external websites.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row justify-content-md-left">
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/creatingLists.jpg', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 5</h4>
-          <h6 class="card-subtitle">Creating lists</h6>
-          <p class="card-text">Use different types of lists to order your content and learn and see when to use which list.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/controllingStylingControllingStylingPart2.jpg', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 6</h4>
-          <h6 class="card-subtitle">Controlling Styling</h6>
-          <p class="card-text">Seeing the 3 different ways to add css to your webpage and finding out most common way.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/controllingStylingControllingStylingPart2.jpg', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 7</h4>
-          <h6 class="card-subtitle">Controlling styling part 2</h6>
-          <p class="card-text">Learn how to give colors, fonts and other attributes and properties to different elements on your webpages.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssBasics.png', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 8</h4>
-          <h6 class="card-subtitle">CSS basics</h6>
-          <p class="card-text">Understanding all the basic elements of css to create layouts and see how they work together.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row justify-content-md-left">
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssCommonConcepts.png', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 9</h4>
-          <h6 class="card-subtitle">CSS common concepts</h6>
-          <p class="card-text">Understanding all the basic elements of css and how they work together.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssFrameworks.jpg', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 10</h4>
-          <h6 class="card-subtitle">CSS frameworks</h6>
-          <p class="card-text">Seeing a faster and structured way using a library with pre-defined css(bootstrap).</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/addingJavaScript.png', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 11</h4>
-          <h6 class="card-subtitle">Adding Javascript</h6>
-          <p class="card-text">See how we add javascript to our html code and how we add interaction to our webpage using Javascript.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-6 col-xs-12">
-      <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/conditionalJavaScript.jpg', class: 'card-img-top card-img-top-programming' %>
-        <div class="card-body">
-          <h4 class="card-title">Challenge 12</h4>
-          <h6 class="card-subtitle">Conditional Javascript</h6>
-          <p class="card-text">Getting a first look on the power of conditional code on a webpage.</p>
-          <a href="<%= nlbc_trainers_path %>" class="btn btn-primary">1:1 training</a>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 <!--
