--- a/app/assets/stylesheets/pages/trainers.scss
+++ b/app/assets/stylesheets/pages/trainers.scss
@@ -19,4 +19,8 @@ $green: #6b8c51;
   .btn{
     border-radius: 0px;
   }
+  input[type="radio"]{
+    visibility: hidden;
+    margin-left: -20px;
+  }
 }
