--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -10,57 +10,55 @@
 <div id="trainer-filters" class="container col-md-6">
   <%= form_for nlbc_trainers_path, method: :get do %>
     <div class="row justify-content-md-center">
-      <div class="col-md-3">
-        <div class="dropdown">
-          <button id="passionButton" class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Passion
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <% @passions.each do |passion| %>
-              <div class="dropdown-item">
-                <label id="passion__<%=passion.id%>">
-                  <%= radio_button_tag('passions[]', passion.id, false, onClick: "Challenges(this);")%> <%= passion.title.capitalize %>
-                </label>
-              </div>
-            <% end %>
-          </div>
+      <div class="dropdown trainer-filtering">
+        <button id="passionButton" class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Passion
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <% @passions.each do |passion| %>
+            <div class="dropdown-item">
+              <label id="passion__<%=passion.id%>">
+                <%= radio_button_tag('passions[]', passion.id, false, onClick: "Challenges(this);")%> <%= passion.title.capitalize %>
+              </label>
+            </div>
+          <% end %>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="dropdown">
-          <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Challenge
-          </button>
-          <div id="challenges_drop" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <% @challenges.each do |challenge| %>
-              <div class="dropdown-item">
-                <label>
-                  <%= check_box_tag 'challenges[]', challenge.id %> <%= challenge.title.capitalize %>
-                </label>
-              </div>
-            <% end %>
-          </div>
+    </div>
+    <div class="row justify-content-md-center">
+      <div class="dropdown trainer-filtering">
+        <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Challenge
+        </button>
+        <div id="challenges_drop" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <% @challenges.each do |challenge| %>
+            <div class="dropdown-item">
+              <label>
+                <%= check_box_tag 'challenges[]', challenge.id %> <%= challenge.title.capitalize %>
+              </label>
+            </div>
+          <% end %>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="dropdown">
-          <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Location
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <% @locations.each do |location| %>
-              <div class="dropdown-item">
-                <label>
-                  <%= check_box_tag 'locations[]', location %> <%= location.capitalize %>
-                </label>
-              </div>
-            <% end %>
-          </div>
+    </div>
+    <div class="row justify-content-md-center">
+      <div class="dropdown trainer-filtering">
+        <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Location
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <% @locations.each do |location| %>
+            <div class="dropdown-item">
+              <label>
+                <%= check_box_tag 'locations[]', location %> <%= location.capitalize %>
+              </label>
+            </div>
+          <% end %>
         </div>
       </div>
-      <div class="col-md-3">
-        <%= submit_tag 'Look up for trainers', class: 'btn btn-sm' %>
-      </div>
+    </div>
+    <div class="row justify-content-md-center">
+      <%= submit_tag 'Look up for trainers', class: 'btn btn-sm' %>
     </div>
   <% end %>
 </div>
