--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -1,10 +1,9 @@
 <div class="container">
-  <p align="center" class="paragraph" style="margin: 80px auto 80px auto;">
+  <p align="center" class="paragraph" style="margin: 40px auto 40px auto;">
     Find your on demand private trainer. The content will be the same but every teacher can add their own specialty
     and support and extra challenges. We advice to follow a bootcamp first, but individual training is possible without.
   </p>
-  <div align="center" class="challenges">Choose your trainer</div>
-  <p align="center" class="paragraph">Meet the people who make learning fun!</p>
+  <p align="center" class="paragraph" style="margin: -20px auto 20px auto;">Meet the people who make learning fun!</p>
 </div>
 
 <div id="trainer-filters" class="container col-md-6">
@@ -58,7 +57,7 @@
       </div>
     </div>
     <div class="row justify-content-md-center">
-      <%= submit_tag 'Look up for trainers', class: 'btn btn-sm' %>
+      <%= submit_tag 'Choose your trainer', class: 'btn btn-sm' %>
     </div>
   <% end %>
 </div>
