--- a/app/assets/stylesheets/shared/navbar.scss
+++ b/app/assets/stylesheets/shared/navbar.scss
@@ -19,3 +19,26 @@ $main-color: #7302A1;
     color: $main-color;
   }
 }
+@media screen and (max-width: 768px) {
+  .navbar-toggler[aria-expanded="false"]{
+    z-index: 100;
+    background: white;
+  }
+  .navbar-toggler[aria-expanded="true"]{
+    @extend .navbar-toggler[aria-expanded="false"];
+    margin-top: 230px;
+  }
+  .collapse.show {
+    padding: 15px;
+    background: white;
+    z-index: 100;
+    border-radius: 10px;
+    box-shadow: 3px 5px 15px rgba(0, 0, 0, 0.25);
+  }
+  .transition {
+    padding: 15px;
+    background: white;
+    z-index: 100;
+    border-radius: 10px;
+  }
+}
